# tabby-english

./: .gitignore  README.md  app.py  main.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
components/: __init__.py
components/ghost_input/: __init__.py
components/ghost_input/frontend/: index.html  streamlit-component-lib.js
pages/: 1_📊_학습_이력.py
src/: graph.py  prompts.py  state.py
src/nodes/: __init__.py  analyze_utterance.py  generate_ai_response.py  generate_feedback.py  generate_ghost.py  persist_session.py  receive_input.py  setup_scenario.py
src/tools/: __init__.py  time_tool.py  weak_points_tool.py
tests/: test_nodes.py  test_phase1.py  test_phase2.py
ui/: __init__.py  feedback_view.py  ghost_panel.py  input_mode_picker.py  scenario_picker.py
